# tachybridge

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md
cpp_mcap_reader/: CMakeLists.txt  package.xml
cpp_mcap_reader/include/cpp_mcap_reader/: cdr_extractor.hpp  mcap_publisher.hpp  playback_controller.hpp
cpp_mcap_reader/src/: cdr_extractor.cpp  main.cpp  mcap_publisher.cpp  playback_controller.cpp
cpp_mcap_reader/test/: test_cdr_extractor.cpp  test_seek.cpp
cpp_rosbridge_core/: CMakeLists.txt  package.xml
cpp_rosbridge_core/cmake/: action_registration.cpp.in  generate_action_registration.cmake  helpers.cmake
cpp_rosbridge_core/config/: specialized_actions.yaml
cpp_rosbridge_core/include/cpp_rosbridge_core/: action_bridge.hpp  capabilities.hpp  cli_constants.hpp  encoding.hpp  introspection.hpp  protocol.hpp
cpp_rosbridge_core/include/cpp_rosbridge_core/capabilities/: action.hpp  cli.hpp  service.hpp  topic.hpp
cpp_rosbridge_core/src/: introspection.cpp  protocol.cpp
cpp_rosbridge_core/src/capabilities/: action.cpp  cli.cpp  service.cpp  topic.cpp
cpp_rosbridge_server/: CMakeLists.txt  package.xml
cpp_rosbridge_server/include/cpp_rosbridge_server/: websocket_server.hpp
cpp_rosbridge_server/launch/: rosbridge_websocket_launch.py
cpp_rosbridge_server/src/: rosbridge_server_node.cpp
cpp_rosbridge_tests/: CMakeLists.txt  package.xml
cpp_rosbridge_tests/src/: bench_performance.cpp  test_action_capability.cpp  test_encoding.cpp  test_execute_cli.cpp  test_performance_fixes.cpp  test_protocol.cpp
cpp_zenoh_gateway/: CMakeLists.txt  package.xml
cpp_zenoh_gateway/config/: default.json
cpp_zenoh_gateway/include/cpp_zenoh_gateway/: gateway_server.hpp  gateway_session.hpp  room.hpp  stream_lane.hpp  wire_format.hpp
cpp_zenoh_gateway/launch/: zenoh_gateway_launch.py
cpp_zenoh_gateway/src/: fanout_hub.cpp  gateway_server.cpp  gateway_session.cpp  main.cpp  room.cpp  stream_lane.cpp
cpp_zenoh_gateway/test/: test_e2e_pipeline.cpp  test_fanout_hub.cpp  test_integration_smoke.cpp  test_stream_lane.cpp  test_wire_format.cpp
cpp_zmq_server/: CMakeLists.txt  package.xml
cpp_zmq_server/include/cpp_zmq_server/: habilis_bridge.hpp  habilis_dispatcher.hpp  habilis_types.hpp  zmq_server.hpp
cpp_zmq_server/launch/: zmq_bridge_launch.py
cpp_zmq_server/scripts/: demo_client.py
cpp_zmq_server/src/: habilis_bridge.cpp  habilis_dispatcher.cpp  zmq_server.cpp  zmq_server_node.cpp
cpp_zmq_server/test/: test_zmq_bridge.cpp
docker/: Dockerfile.build-test
docs/: dds-middleware-guide.md  docker-dependencies.md
docs/devlog/: DEVLOG-002-habilis-zmq-protocol-bridge.md  README.md
docs/protocol/: habilis-protocol-spec.md
docs/superpowers/plans/: 2026-04-10-zenoh-gateway-phase2a.md  2026-04-10-zenoh-gateway-phase2b.md
docs/testing/: zmq-habilis-protocol-testing.md
docs/troubleshooting/: README.md
docs/troubleshooting/performance/: TSG-001-tachybridge-io-thread-blocking.md
include/cpp_zenoh_gateway/: fanout_hub.hpp
logs/devlog/: DEVLOG-001-habilis-bridge-prd-completion.md  DEVLOG-001-zenoh-ws-gateway-full-implementation.md  README.md
scripts/: merge-dev-to-main.sh
src/: gateway_session.cpp
tachybridge-js/: package.json  tsconfig.json
tachybridge-js/src/: client.ts  index.ts
test/: CMakeLists.txt  package.xml  test_room.cpp
test/scripts/: test_habilis_spec.py
test/src/: test_cbor_transport.cpp  test_habilis_bridge.cpp  test_habilis_types.cpp  test_zmq_bridge.cpp
tests/: scale_test.py
