<?xml version="1.0"?>
<package format="3">
  <name>cpp_mcap_reader</name>
  <version>0.1.0</version>
  <description>MCAP file reader that publishes to Zenoh</description>
  <maintainer email="dev@tommoro.ai">tommoro</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>liblz4-dev</build_depend>
  <build_depend>libzstd-dev</build_depend>
  <build_depend>nlohmann-json-dev</build_depend>
  <exec_depend>liblz4-1</exec_depend>
  <exec_depend>libzstd1</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
