<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_rosbridge_core</name>
  <version>0.0.1</version>
  <description>C++ implementation of rosbridge core library (protocol, routing, json parsing).</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nlohmann-json-dev</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_action</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>

  <exec_depend>rmw_zenoh_cpp</exec_depend>

  <!-- Optional: only needed for action auto-registration at build time.
       std_msgs, sensor_msgs, example_interfaces are loaded at runtime via
       dlopen (no headers included) so they are not listed as build deps. -->
  <build_depend>physical_ai_interfaces</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
