<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_zenoh_gateway</name>
  <version>0.1.0</version>
  <description>Zenoh-to-WebSocket gateway for MCAP playback streaming</description>
  <maintainer email="dev@tommoro.ai">tommoro</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>nlohmann-json-dev</build_depend>
  <exec_depend>boost</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
