<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_zmq_server</name>
  <version>0.0.1</version>
  <description>ZMQ-based rosbridge server using ROUTER-DEALER pattern for non-ROS2 system integration.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>cpp_rosbridge_core</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>launch_ros</depend>

  <build_depend>boost</build_depend>
  <build_depend>libzmq3-dev</build_depend>
  <build_depend>cppzmq-dev</build_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>libzmq3-dev</exec_depend>

  <exec_depend>rmw_zenoh_cpp</exec_depend>
  <exec_depend>rmw_cyclonedds_cpp</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
